<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MLM Pro</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contact_show">MLM Pro</string>

    <string name="lesson">Lesson : </string>
    <string name="time">Time : </string>
    <string name="motive">Motive : </string>

    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>

    <string name="dialogtxt">بازار یابی شبکه ای به عنوان پدیده جدیدی در کشورمان مطرح شده و هم اکنون شرکت ها وافراد زیادی  در این زمینه به صورت قانونی فعالیت میکنند . با گسترش روز افزون این حرفه دوست داشتنی بر آن شدیم که ابزاری حرفه ای برای دوست داران این شغل محیا نماییم . </string>
    <string name="update_header">
        نسخه جدید نرم افزار منتشر شده است
    </string>
    <string name="update_body">
        برای استفاده از اپلیکیشن لطفا آن را بروز رسانی کنید.
    </string>


    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="mdtp_done_label" msgid="7007948707597430919">"انجام شد"</string>
    <string name="mdtp_ok">تایید</string>
    <string name="mdtp_cancel">بیخیال</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_hour_picker_description" msgid="7586639618712934060">"لغزنده دایره‌ای ساعت"</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_minute_picker_description" msgid="6024811202872705251">"لغزنده دایره‌ای دقیقه"</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_hours" msgid="7651068754188418859">"انتخاب ساعت"</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_minutes" msgid="8327182090226828481">"انتخاب دقیقه"</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="mdtp_year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="mdtp_item_is_selected" msgid="2674929164900463786">"<xliff:g id="ITEM">%1$s</xliff:g> انتخاب شد"</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="mdtp_deleted_key" msgid="6908431551612331381">"<xliff:g id="KEY">%1$s</xliff:g> حذف شد"</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_time_placeholder" translatable="false">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_time_separator" translatable="false">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_radial_numbers_typeface" translatable="false">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_sans_serif" translatable="false">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_day_of_week_label_typeface" translatable="false">sans-serif</string>

    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark_time">Use dark theme</string>
    <string name="mode_dark_date">Use dark theme</string>
    <string name="action_settings">Settings</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</string>
    <string name="choose_a_new_background">Choose a new Background !</string>
    <string name="welcome">Welcome !</string>


    <!--Demo Texts-->
    <string name="task_demo"><![CDATA[
<!DOCTYPE HTML>
<html>
    <H4>کارها</H4>
    <P>در این بخش شما فعالیت های مربوط به نتورک مارکتینگ را برنامه ریزی و مدیریت مینماید</P>
    <p>در مجموع شما با انجام هر کدام از این فعالیت ها
امتیازی در یافت میکنید که میتوانید از آن به عنوان یک شاخص برای ارزیابی عملکرد
خود در این حرفه استفاده کنید
</p>
</html>
    ]]></string>
    <string name="contacts_demo"><![CDATA[
<!DOCTYPE HTML>
<html>
    <H3>کانتکت</H3>
    <P>در این قسمت شما یک کانتکت مختص بازاریابی شبکه ای دارید و میتوانید با استفاده از
آن لیست دعوت و مشتریان خود را  تشکیل دهید و همچنین زیر مجموعه ها و جایگاه
انها را در لول های مختلف مشاهده نمایید و  تیم خود را مدیریت کنید
</P>
</html>
    ]]></string>
    <string name="lessons_demo"><![CDATA[
<!DOCTYPE HTML>
<html>
    <H3>آموزشها</H3>
    <P>در این قسمت شما به جدید ترین مفاهیم آموزشی  دزمینه بازار یابی شبکه ای دسترسی
خواهید داشت این آموزش ها شامل پادکست های صوتی و مقالاتی است که سعی دارد
مهارت های ضروری برای این حرفه را به شما آموزش دهد شما متناسب با فعالیت و
مطالعه ی آموزش ها در این قسمت داشته اید امتیاز کسب میکنید وهر چه امتیاز شما
در این بخش بیش تر باشد به مطالب سطح بالاتری دسترسی خواهید داشت
</P>
</html>
    ]]></string>
    <string name="vision_demo"><![CDATA[
    <!DOCTYPE HTML>
        <html>
        <H3>ویژن</H3>
        <p>شما در این بخش می توانید اهدافی را که  برای آینده خود در نظر دارید منسجم کنید
به نحوی که  برای شما کاملا ملموس  باشد همچنین برای رسیدن به این اهداف مدت زمانی را در نظر بگیرید
و به شکلی عینی آن را در ذهن خود منسجم کنید
</p>
        </html>
    ]]></string>


    <string name="texttexttext">لورم ایپلورم ایپسوم یا طرح‌نما (به انگلیسی: Lorem ipsum) به متنی آزمایشی و بی‌معنی در صنعت چاپ، صفحه‌آرایی و طراحی گرافیک گفته می‌شود. طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد. معمولا طراحان گرافیک برای صفحه‌آرایی، نخست از متن‌های آزمایشی و بی‌معنی استفاده می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفلورم ایپسوم یا طرح‌نما (به انگلیسی: Lorem ipsum) به متنی آزمایشی و بی‌معنی در صنعت چاپ، صفحه‌آرایی و طراحی گرافیک گفته می‌شود. طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد. معمولا طراحان گرافیک برای صفحه‌آرایی، نخست از متن‌های آزمایشی و بی‌معنی استفاده می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.اده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.سوم یا طرح‌نما (به انگلیسی: Lorem ipsum) به متنی آزمایشی و بی‌معنی در صنعت چاپ، صفحه‌آرایی و طراحی گرافیک گفته می‌شود. طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد. معمولا طراحان گرافیک برای صفحه‌آرایی، نخست از متن‌های آزمایشی و بی‌معنی استفاده می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.</string>
    <string name="check_all_news">Check All News</string>
    <string name="today"> Today </string>
    <string name="set_reminder_text">Set Reminder</string>
    <string name="gregorian_text">Gregorian</string>
    <string name="shamsi_text">Shamsi</string>
    <string name="change_language">Change Language</string>
    <string name="calendar_type">Calendar Type</string>
    <string name="change_background">Change Background</string>
</resources>
