<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ir.cdesign.contactrate.ContactShow"
    tools:showIn="@layout/activity_contact_show">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_container">
        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:src="@drawable/contact"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="bahram"
            android:id="@+id/contact_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_container"
        android:enabled="false"
        android:id="@+id/contact_number"
        android:inputType="phone"
        android:textColor="@color/darkWhite"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_number"
        android:orientation="vertical"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            style="@style/contact_points">
            <TextView
                style="@style/contact_points_title"
                android:text="@string/lesson" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/stars"/>
        </LinearLayout>
        <LinearLayout
            style="@style/contact_points">
            <TextView
                style="@style/contact_points_title"
                android:text="@string/time" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/stars"/>
        </LinearLayout>
        <LinearLayout
            style="@style/contact_points">
            <TextView
                style="@style/contact_points_title"
                android:text="@string/motive" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/stars"/>
        </LinearLayout>


    </LinearLayout>
    <Button
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/tik_1"/>

</RelativeLayout>
