<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LinearLayout"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ir.cdesign.contactrate.ContactShow">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            android:background="#0000" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="0dp"
                    android:src="@drawable/contact" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="Name :"
                        android:textColor="@color/white"
                        android:textSize="19dp" />

                    <EditText
                        android:id="@+id/contact_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:hint=""
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="#9e9e9e" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="Phone :"
                        android:textColor="@color/white"
                        android:textSize="19dp" />

                    <EditText
                        android:id="@+id/contact_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:hint="+989120000000"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="#9e9e9e" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_point_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/contact_points"
                    android:tag="1">

                    <TextView
                        style="@style/contact_points_title"
                        android:text="@string/lesson" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/contact_points"
                    android:tag="2">

                    <TextView
                        style="@style/contact_points_title"
                        android:text="@string/time" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/contact_points"
                    android:tag="3">

                    <TextView
                        style="@style/contact_points_title"
                        android:text="@string/motive" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                        <ImageView style="@style/contact_points_stars" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/add_contact_btn"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/tik_1"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>